# TicTacToe

./: CMakeLists.txt  README.md  build_mingw.bat  build_vs_2019.bat  init_project.bat
src/GameLib/: Board.cpp  Board.h  CMakeLists.txt  ComputerPlayerMove.cpp  ComputerPlayerMove.h  GameControl.cpp  GameControl.h  GameModel.cpp  GameModel.h  GameTypes.h  GeomTypes.h  IGameView.h  IPlayerController.h  IStatusMessage.h  PlayerControllers.cpp  PlayerControllers.h  Util.h
src/app/: Application.cpp  Application.h  BoardWidget.cpp  BoardWidget.h  CMakeLists.txt  MainWindow.cpp  MainWindow.h  NewGameDialog.cpp  NewGameDialog.h  StatusBar.cpp  StatusBar.h  Svgs.cpp  Svgs.h  main.cpp
